added certificates selector

--- a/index.html
+++ b/index.html
@@ -1,119 +1,152 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+  <head>
+    <title>ACB</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="css/style.css" rel="stylesheet" />
+  </head>
 
-<head>
-  <title>ACB</title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="css/style.css" rel="stylesheet">
-</head>
-
-<body>
-  <div id="navbar">
-    <img src="images/Logo.svg" alt="logo">
-    <nav>
-      <a href="index.html">О компании</a>
-      <a href="uslugi.html">Услуги</a>
-      <a href="sertificates.html">Сертификаты</a>
-      <a href="resurs.html">Наши ресурсы</a>
-      <a href="obekti.html">Наши обьекты</a>
-      <a href="kontakts.html">Контакты</a>
-    </nav>
-    <input type="checkbox" id="hamburger">
-    <label for="hamburger" id="hm_label">
-      <hr>
-      <hr>
-      <hr>
-    </label>
-    <div class="menu">
-      <a href="index.html">О компании</a>
-      <a href="uslugi.html">Услуги</a>
-      <a href="sertificates.html">Сертификаты</a>
-      <a href="resurs.html">Наши ресурсы</a>
-      <a href="obekti.html">Наши обьекты</a>
-      <a href="kontakts.html">Контакты</a>
+  <body>
+    <div id="navbar">
+      <img src="images/Logo.svg" alt="logo" />
+      <nav>
+        <a href="index.html">О компании</a>
+        <a href="uslugi.html">Услуги</a>
+        <a href="sertificates.html">Сертификаты</a>
+        <a href="resurs.html">Наши ресурсы</a>
+        <a href="obekti.html">Наши обьекты</a>
+        <a href="kontakts.html">Контакты</a>
+      </nav>
+      <input type="checkbox" id="hamburger" />
+      <label for="hamburger" id="hm_label">
+        <hr />
+        <hr />
+        <hr />
+      </label>
+      <div class="menu">
+        <a href="index.html">О компании</a>
+        <a href="uslugi.html">Услуги</a>
+        <a href="sertificates.html">Сертификаты</a>
+        <a href="resurs.html">Наши ресурсы</a>
+        <a href="obekti.html">Наши обьекты</a>
+        <a href="kontakts.html">Контакты</a>
+      </div>
     </div>
-  </div>
 
-  <header class="home_header">
-    <section>
-      <div id="title">
-        <h1>Asia Capital Building</h1>
-        <p>Мы создаем здания, сооружения и комплексы любой сложности
-          с высоким качеством и в срок</p>
-      </div>
-    </section>
-  </header>
-  <main>
-    <section class="info">
-      <h2>О нас</h2>
-      <article>
-        <p><b>Динамично развивающаяся строительная компания,</b> специализирующаяся на выполнении общестроительных
-          и специальных работ по возведению зданий, сооружений, производственных комплексов и складов любой сложности,
-          включая полный перечень работ по строительству зданий
-          «с нуля»:</p>
-        <ul>
-          <li>Земляные работы, устройство фундаментов, стен и перекрытий</li>
-          <li>Монолитные работы, монтаж металлоконструкций</li>
-          <li>Монтаж внутренних и внешних инженерных сетей</li>
-          <li>Ремонтные и отделочные работы</li>
-          <li>Благоустройство территории</li>
-        </ul>
-        <p>За последние годы наша компания демонстрирует уверенный
-          и постоянный рост вводимых в эксплуатацию площадей жилого, коммерческого и муниципального назначения.
-          В нашей компании имеется вся необходимая строительная техника.</p>
-      </article>
-    </section>
+    <header class="home_header">
+      <section>
+        <div id="title">
+          <h1>Asia Capital Building</h1>
+          <p>
+            Мы создаем здания, сооружения и комплексы любой сложности с высоким
+            качеством и в срок
+          </p>
+        </div>
+      </section>
+    </header>
+    <main>
+      <section class="info">
+        <h2>О нас</h2>
+        <article>
+          <p>
+            <b>Динамично развивающаяся строительная компания,</b>
+            специализирующаяся на выполнении общестроительных и специальных
+            работ по возведению зданий, сооружений, производственных комплексов
+            и складов любой сложности, включая полный перечень работ по
+            строительству зданий «с нуля»:
+          </p>
+          <ul>
+            <li>Земляные работы, устройство фундаментов, стен и перекрытий</li>
+            <li>Монолитные работы, монтаж металлоконструкций</li>
+            <li>Монтаж внутренних и внешних инженерных сетей</li>
+            <li>Ремонтные и отделочные работы</li>
+            <li>Благоустройство территории</li>
+          </ul>
+          <p>
+            За последние годы наша компания демонстрирует уверенный и постоянный
+            рост вводимых в эксплуатацию площадей жилого, коммерческого и
+            муниципального назначения. В нашей компании имеется вся необходимая
+            строительная техника.
+          </p>
+        </article>
+      </section>
 
-    <section class="info dimmer">
-      <h2>Наши принципы</h2>
-      <article>
-        <p><b>Мы полагаем, что наша первая ответственность перед людьми, которые живут и работают рядом с нами. Мы
-            должны постоянно вести работу по повышению производительности труда и безопасности рабочих мест, при этом
-            снижая экологически неблагоприятное воздействие на окружающую среду путем внедрения наиболее современных,
-            безопасных, экономически эффективных и автоматизированных способов производства.</b></p>
-        <ul>
-          <li>Мы обеспечиваем квалифицированное управление производством, действуя профессионально, своевременно,
-            этично.</li>
-          <li>Мы создаем условия для того, чтобы наши работники работали продуктивно, могли решать поставленные задачи,
-            наиболее полно используя свои знания, умения и навыки.</li>
-          <li>Интересы компании и каждого – работники неотделимы друг от друга.</li>
-          <li>Мы стремимся делать работу качественно, в срок, по оптимальной цене.</li>
-          <li>Мы придаем большое значение освоению новых перспективных технологий.</li>
-          <li>Оценка деятельности компании ведется по строгим критериям в сравнении с наилучшими показателями, как самой
-            компании, так и конкурентной среды.</li>
-        </ul>
-      </article>
-    </section>
-    <section class="info">
-      <h2>Наша Стратегия</h2>
-      <article>
-        <p><b>Предложение наиболее оптимальных решений поставленных задач в четком соответствии с требованиями
-            заказчиков не только за счет повышения эффективности уже существующих видов деятельности, но и путем
-            развития новых направлений, охватывающих все более широкий спектр деловых интересов постоянных и
-            потенциальных заказчиков. Компания стремится всегда идти в ногу со временем, демонстрируя
-            высокотехнологичный подход к строительному бизнесу.</b></p>
-      </article>
-    </section>
+      <section class="info dimmer">
+        <h2>Наши принципы</h2>
+        <article>
+          <p>
+            <b
+              >Мы полагаем, что наша первая ответственность перед людьми,
+              которые живут и работают рядом с нами. Мы должны постоянно вести
+              работу по повышению производительности труда и безопасности
+              рабочих мест, при этом снижая экологически неблагоприятное
+              воздействие на окружающую среду путем внедрения наиболее
+              современных, безопасных, экономически эффективных и
+              автоматизированных способов производства.</b
+            >
+          </p>
+          <ul>
+            <li>
+              Мы обеспечиваем квалифицированное управление производством,
+              действуя профессионально, своевременно, этично.
+            </li>
+            <li>
+              Мы создаем условия для того, чтобы наши работники работали
+              продуктивно, могли решать поставленные задачи, наиболее полно
+              используя свои знания, умения и навыки.
+            </li>
+            <li>
+              Интересы компании и каждого – работники неотделимы друг от друга.
+            </li>
+            <li>
+              Мы стремимся делать работу качественно, в срок, по оптимальной
+              цене.
+            </li>
+            <li>
+              Мы придаем большое значение освоению новых перспективных
+              технологий.
+            </li>
+            <li>
+              Оценка деятельности компании ведется по строгим критериям в
+              сравнении с наилучшими показателями, как самой компании, так и
+              конкурентной среды.
+            </li>
+          </ul>
+        </article>
+      </section>
+      <section class="info">
+        <h2>Наша Стратегия</h2>
+        <article>
+          <p>
+            <b
+              >Предложение наиболее оптимальных решений поставленных задач в
+              четком соответствии с требованиями заказчиков не только за счет
+              повышения эффективности уже существующих видов деятельности, но и
+              путем развития новых направлений, охватывающих все более широкий
+              спектр деловых интересов постоянных и потенциальных заказчиков.
+              Компания стремится всегда идти в ногу со временем, демонстрируя
+              высокотехнологичный подход к строительному бизнесу.</b
+            >
+          </p>
+        </article>
+      </section>
 
-    <section class="certs">
-      <h2>Лицензии и сертификаты</h2>
-      <div id="certificates">
-        <img src="images/certifiactes/image3.png">
-        <img src="images/certifiactes/image4.png">
-        <img src="images/certifiactes/image5.png">
-        <img src="images/certifiactes/image6.jpeg">
-        <img src="images/certifiactes/image7.jpeg">
-        <img src="images/certifiactes/image8.jpeg">
-        <img src="images/certifiactes/image9.jpeg">
-        <img src="images/certifiactes/image10.jpeg">
-        <img src="images/certifiactes/image11.jpeg">
-      </div>
-    </section>
-  </main>
-  <footer>
-
-  </footer>
-</body>
-
+      <section class="certs">
+        <h2>Лицензии и сертификаты</h2>
+        <div id="certificates">
+          <img src="images/certifiactes/image3.png" />
+          <img src="images/certifiactes/image4.png" />
+          <img src="images/certifiactes/image5.png" />
+          <img src="images/certifiactes/image6.jpeg" />
+          <img src="images/certifiactes/image7.jpeg" />
+          <img src="images/certifiactes/image8.jpeg" />
+          <img src="images/certifiactes/image9.jpeg" />
+          <img src="images/certifiactes/image10.jpeg" />
+          <img src="images/certifiactes/image11.jpeg" />
+        </div>
+      </section>
+    </main>
+    <footer></footer>
+  </body>
 </html>
