--- a/sertificates.html
+++ b/sertificates.html
@@ -1,66 +1,94 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+  <head>
+    <title>ACB</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="css/style.css" rel="stylesheet" />
+  </head>
 
-<head>
-  <title>ACB</title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="css/style.css" rel="stylesheet">
-</head>
-
-<body>
-  <div id="navbar">
-    <img src="images/Logo.svg" alt="logo">
-    <nav>
-      <a href="index.html">О компании</a>
-      <a href="uslugi.html">Услуги</a>
-      <a href="sertificates.html">Сертификаты</a>
-      <a href="resurs.html">Наши ресурсы</a>
-      <a href="obekti.html">Наши обьекты</a>
-      <a href="kontakts.html">Контакты</a>
-    </nav>
-    <input type="checkbox" id="hamburger">
-    <label for="hamburger" id="hm_label">
-      <hr>
-      <hr>
-      <hr>
-    </label>
-    <div class="menu">
-      <a href="index.html">О компании</a>
-      <a href="uslugi.html">Услуги</a>
-      <a href="sertificates.html">Сертификаты</a>
-      <a href="resurs.html">Наши ресурсы</a>
-      <a href="obekti.html">Наши обьекты</a>
-      <a href="kontakts.html">Контакты</a>
-    </div>
-  </div>
-  <header>
-    <section>
-      <div class="title">
-        <h1>Лицензии и сертификаты</h1>
+  <body>
+    <div id="navbar">
+      <img src="images/Logo.svg" alt="logo" />
+      <nav>
+        <a href="index.html">О компании</a>
+        <a href="uslugi.html">Услуги</a>
+        <a href="sertificates.html">Сертификаты</a>
+        <a href="resurs.html">Наши ресурсы</a>
+        <a href="obekti.html">Наши обьекты</a>
+        <a href="kontakts.html">Контакты</a>
+      </nav>
+      <input type="checkbox" id="hamburger" />
+      <label for="hamburger" id="hm_label">
+        <hr />
+        <hr />
+        <hr />
+      </label>
+      <div class="menu">
+        <a href="index.html">О компании</a>
+        <a href="uslugi.html">Услуги</a>
+        <a href="sertificates.html">Сертификаты</a>
+        <a href="resurs.html">Наши ресурсы</a>
+        <a href="obekti.html">Наши обьекты</a>
+        <a href="kontakts.html">Контакты</a>
       </div>
-    </section>
-  </header>
+    </div>
+    <header>
+      <section>
+        <div class="title">
+          <h1>Лицензии и сертификаты</h1>
+        </div>
+      </section>
+    </header>
 
-  <main>
-    <section>
-      Деятельность Компании регламентирована:
+    <main>
+      <section class="certs">
+        <h2>Сертификаты</h2>
+        <input type="checkbox" id="img1" />
+        <input type="checkbox" id="img2" />
+        <input type="checkbox" id="img3" />
+        <input type="checkbox" id="img4" />
+        <input type="checkbox" id="img5" />
+        <input type="checkbox" id="img6" />
+        <input type="checkbox" id="img7" />
+        <input type="checkbox" id="img8" />
+        <input type="checkbox" id="img9" />
+        <div id="certificates">
+          <label for="img1"><img src="images/certifiactes/image1.png" /></label>
+          <label for="img2"><img src="images/certifiactes/image2.png" /></label>
+          <label for="img3"><img src="images/certifiactes/image3.png" /></label>
+          <label for="img4"><img src="images/certifiactes/image4.jpg" /></label>
+          <label for="img5"><img src="images/certifiactes/image5.jpg" /></label>
+          <label for="img6"><img src="images/certifiactes/image6.jpg" /></label>
+          <label for="img7"><img src="images/certifiactes/image7.jpg" /></label>
+          <label for="img8"><img src="images/certifiactes/image8.jpg" /></label>
+          <label for="img9"><img src="images/certifiactes/image9.jpg" /></label>
+        </div>
+      </section>
+      <section>
+        Деятельность Компании регламентирована:  государственной лицензией I
+        категории на производство строительно- монтажных работ ГСЛ №01103,
+        выданной 19.05.2017 года; В Компании внедрена система менеджмента
+        качества, система менеджмента профессиональной безопасности и здоровья и
+        экологического менеджмента в соответствии со стандартами:  СТ РК ISO
+        9001 – 2016 (ISO 9001:2015);  СТ РК OHSAS 18001 – 2008 (OHSAS
+        18001:2007);  СТ РК ISO 14001 – 2016 (ISO 14001:2015).
+      </section>
+    </main>
 
-       государственной лицензией I категории на производство строительно- монтажных работ ГСЛ №01103, выданной
-      19.05.2017
-      года;
-      В Компании внедрена система менеджмента качества, система менеджмента профессиональной безопасности и здоровья и
-      экологического менеджмента в соответствии со стандартами:
-
-       СТ РК ISO 9001 – 2016 (ISO 9001:2015);
-       СТ РК OHSAS 18001 – 2008 (OHSAS 18001:2007);
-       СТ РК ISO 14001 – 2016 (ISO 14001:2015).
-    </section>
-  </main>
-
-  <footer>
-
-  </footer>
-</body>
-
+    <footer>
+      <ul>
+        <li>БИН: 050340018953</li>
+        <li>
+          <a
+            href="https://2gis.kz/karaganda/search/%D0%A0%D0%B5%D1%81%D0%BF%D1%83%D0%B1%D0%BB%D0%B8%D0%BA%D0%B0%20%D0%9A%D0%B0%D0%B7%D0%B0%D1%85%D1%81%D1%82%D0%B0%D0%BD%2C%20100008%2C%20%D0%9A%D0%B0%D1%80%D0%B0%D0%B3%D0%B0%D0%BD%D0%B4%D0%B8%D0%BD%D1%81%D0%BA%D0%B0%D1%8F%20%D0%BE%D0%B1%D0%BB%D0%B0%D1%81%D1%82%D1%8C%2C%20%D0%B3%D0%BE%D1%80%D0%BE%D0%B4%20%D0%9A%D0%B0%D1%80%D0%B0%D0%B3%D0%B0%D0%BD%D0%B4%D0%B0%2C%20%20%D1%83%D0%BB%D0%B8%D1%86%D0%B0%20%D0%A1%D0%BA%D0%BB%D0%B0%D0%B4%D1%81%D0%BA%D0%B0%D1%8F%2010%2F3/firm/70000001057896039/73.100716%2C49.792978?m=73.101467%2C49.794488%2F14.44"
+          >
+            Республика Казахстан, 100008, Карагандинская область, город
+            Караганда, улица Складская 10/3
+          </a>
+        </li>
+        <li><a href="mailto:info@aziacb.kz">info@aziacb.kz</a></li>
+      </ul>
+    </footer>
+  </body>
 </html>
