fixed main page image names

--- a/index.html
+++ b/index.html
@@ -135,15 +135,15 @@
       <section class="certs">
         <h2>Лицензии и сертификаты</h2>
         <div id="certificates">
+          <img src="images/certifiactes/image1.png" />
+          <img src="images/certifiactes/image2.png" />
           <img src="images/certifiactes/image3.png" />
-          <img src="images/certifiactes/image4.png" />
-          <img src="images/certifiactes/image5.png" />
-          <img src="images/certifiactes/image6.jpeg" />
-          <img src="images/certifiactes/image7.jpeg" />
-          <img src="images/certifiactes/image8.jpeg" />
-          <img src="images/certifiactes/image9.jpeg" />
-          <img src="images/certifiactes/image10.jpeg" />
-          <img src="images/certifiactes/image11.jpeg" />
+          <img src="images/certifiactes/image4.jpg" />
+          <img src="images/certifiactes/image5.jpg" />
+          <img src="images/certifiactes/image6.jpg" />
+          <img src="images/certifiactes/image7.jpg" />
+          <img src="images/certifiactes/image8.jpg" />
+          <img src="images/certifiactes/image9.jpg" />
         </div>
       </section>
     </main>
