--- a/index.html
+++ b/index.html
@@ -147,6 +147,19 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <ul>
+        <li>БИН: 050340018953</li>
+        <li>
+          <a
+            href="https://2gis.kz/karaganda/search/%D0%A0%D0%B5%D1%81%D0%BF%D1%83%D0%B1%D0%BB%D0%B8%D0%BA%D0%B0%20%D0%9A%D0%B0%D0%B7%D0%B0%D1%85%D1%81%D1%82%D0%B0%D0%BD%2C%20100008%2C%20%D0%9A%D0%B0%D1%80%D0%B0%D0%B3%D0%B0%D0%BD%D0%B4%D0%B8%D0%BD%D1%81%D0%BA%D0%B0%D1%8F%20%D0%BE%D0%B1%D0%BB%D0%B0%D1%81%D1%82%D1%8C%2C%20%D0%B3%D0%BE%D1%80%D0%BE%D0%B4%20%D0%9A%D0%B0%D1%80%D0%B0%D0%B3%D0%B0%D0%BD%D0%B4%D0%B0%2C%20%20%D1%83%D0%BB%D0%B8%D1%86%D0%B0%20%D0%A1%D0%BA%D0%BB%D0%B0%D0%B4%D1%81%D0%BA%D0%B0%D1%8F%2010%2F3/firm/70000001057896039/73.100716%2C49.792978?m=73.101467%2C49.794488%2F14.44"
+          >
+            Республика Казахстан, 100008, Карагандинская область, город
+            Караганда, улица Складская 10/3
+          </a>
+        </li>
+        <li><a href="mailto:info@aziacb.kz">info@aziacb.kz</a></li>
+      </ul>
+    </footer>
   </body>
 </html>
