changed a logo and tuned the gradient

--- a/index.html
+++ b/index.html
@@ -33,11 +33,14 @@
     <header class="home_header">
       <section>
         <div id="title">
-          <h1>AsiaCapitalBuilding</h1>
-          <p>
-            Мы создаем здания, сооружения и комплексы любой сложности с высоким
-            качеством и в срок
-          </p>
+          <img src="images/logo.svg" alt="logo" />
+          <div>
+            <h1>AsiaCapitalBuilding</h1>
+            <p>
+              Мы создаем здания, сооружения и комплексы любой сложности с
+              высоким качеством и в срок
+            </p>
+          </div>
         </div>
       </section>
     </header>
