--- a/kontakts.html
+++ b/kontakts.html
@@ -12,9 +12,7 @@
       <img src="images/Logo.svg" alt="logo" />
       <nav>
         <a href="index.html">О компании</a>
-        <!-- <a href="uslugi.html">Услуги</a> -->
         <a href="sertificates.html">Сертификаты</a>
-        <!-- <a href="resurs.html">Наши ресурсы</a> -->
         <a href="obekti.html">Наши обьекты</a>
         <a href="kontakts.html">Контакты</a>
       </nav>
@@ -26,13 +24,18 @@
       </label>
       <div class="menu">
         <a href="index.html">О компании</a>
-        <!-- <a href="uslugi.html">Услуги</a> -->
         <a href="sertificates.html">Сертификаты</a>
-        <!-- <a href="resurs.html">Наши ресурсы</a> -->
         <a href="obekti.html">Наши обьекты</a>
         <a href="kontakts.html">Контакты</a>
       </div>
     </div>
+    <header>
+      <section>
+        <div class="title">
+          <h1>Контакты</h1>
+        </div>
+      </section>
+    </header>
 
     <footer>
       <ul>
