--- a/sertificates.html
+++ b/sertificates.html
@@ -50,24 +50,28 @@
               <img src="images/certifiactes/9001_kaz_1.png" />
               <img src="images/certifiactes/9001_kaz_2.png" />
             </div>
+            <a download href="documents/9001_kaz.pdf">загрузить документ</a>
           </label>
           <label for="img2">
             <div class="img">
               <img src="images/certifiactes/9001_rus_1.png" />
               <img src="images/certifiactes/9001_rus_2.png" />
             </div>
+            <a download href="documents/9001_rus.pdf">загрузить документ</a>
           </label>
           <label for="img3">
             <div class="img">
               <img src="images/certifiactes/14001_kaz_1.png" />
               <img src="images/certifiactes/14001_kaz_2.png" />
             </div>
+            <a download href="documents/14001_kaz.pdf">загрузить документ</a>
           </label>
           <label for="img4">
             <div class="img">
               <img src="images/certifiactes/14001_rus_1.png" />
               <img src="images/certifiactes/14001_rus_2.png" />
             </div>
+            <a download href="documents/14001_rus.pdf">загрузить документ</a>
           </label>
         </div>
       </section>
