--- a/index.html
+++ b/index.html
@@ -137,11 +137,34 @@
         <div id="certificates">
           <label for="imgl">
             <div class="img">
-              <img src="images/lisences/imgl_1.png" alt="Lisence page 1" />
-              <img src="images/lisences/imgl_2.png" alt="Lisence page 2" />
-              <img src="images/lisences/imgl_3.png" alt="Lisence page 3" />
-              <img src="images/lisences/imgl_4.png" alt="Lisence page 4" />
+              <img
+                class="document"
+                src="images/lisences/imgl_1.png"
+                alt="Lisence page 1"
+              />
+              <img
+                class="document"
+                src="images/lisences/imgl_2.png"
+                alt="Lisence page 2"
+              />
+              <img
+                class="document"
+                src="images/lisences/imgl_3.png"
+                alt="Lisence page 3"
+              />
+              <img
+                class="document"
+                src="images/lisences/imgl_4.png"
+                alt="Lisence page 4"
+              />
             </div>
+            <a
+              download
+              title="скачать документ"
+              href="documents/ACB_license.pdf"
+            >
+              <img src="images/download.svg" />
+            </a>
           </label>
         </div>
       </section>
