--- a/sertificates.html
+++ b/sertificates.html
@@ -47,31 +47,39 @@
         <div id="certificates">
           <label for="img1">
             <div class="img">
-              <img src="images/certifiactes/9001_kaz_1.png" />
-              <img src="images/certifiactes/9001_kaz_2.png" />
+              <img class="document" src="images/certifiactes/9001_kaz_1.png" />
+              <img class="document" src="images/certifiactes/9001_kaz_2.png" />
             </div>
-            <a download href="documents/9001_kaz.pdf">загрузить документ</a>
+            <a download title="скачать документ" href="documents/9001_kaz.pdf">
+              <img src="images/download.svg" />
+            </a>
           </label>
           <label for="img2">
             <div class="img">
-              <img src="images/certifiactes/9001_rus_1.png" />
-              <img src="images/certifiactes/9001_rus_2.png" />
+              <img class="document" src="images/certifiactes/9001_rus_1.png" />
+              <img class="document" src="images/certifiactes/9001_rus_2.png" />
             </div>
-            <a download href="documents/9001_rus.pdf">загрузить документ</a>
+            <a download title="скачать документ" href="documents/9001_rus.pdf">
+              <img src="images/download.svg" />
+            </a>
           </label>
           <label for="img3">
             <div class="img">
-              <img src="images/certifiactes/14001_kaz_1.png" />
-              <img src="images/certifiactes/14001_kaz_2.png" />
+              <img class="document" src="images/certifiactes/14001_kaz_1.png" />
+              <img class="document" src="images/certifiactes/14001_kaz_2.png" />
             </div>
-            <a download href="documents/14001_kaz.pdf">загрузить документ</a>
+            <a download title="скачать документ" href="documents/14001_kaz.pdf">
+              <img src="images/download.svg" />
+            </a>
           </label>
           <label for="img4">
             <div class="img">
-              <img src="images/certifiactes/14001_rus_1.png" />
-              <img src="images/certifiactes/14001_rus_2.png" />
+              <img class="document" src="images/certifiactes/14001_rus_1.png" />
+              <img class="document" src="images/certifiactes/14001_rus_2.png" />
             </div>
-            <a download href="documents/14001_rus.pdf">загрузить документ</a>
+            <a download title="скачать документ" href="documents/14001_rus.pdf">
+              <img src="images/download.svg" />
+            </a>
           </label>
         </div>
       </section>
