--- a/kontakts.html
+++ b/kontakts.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="css/style.css" rel="stylesheet" />
+    <link href="css/contacts.css" rel="stylesheet" />
   </head>
 
   <body>
@@ -37,22 +38,43 @@
       </section>
     </header>
     <main>
-      <div class="map" style="width: 100%">
-        <iframe
-          width="80%"
-          height="600"
-          frameborder="0"
-          scrolling="no"
-          marginheight="0"
-          marginwidth="0"
-          src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=%20%D0%A0%D0%B5%D1%81%D0%BF%D1%83%D0%B1%D0%BB%D0%B8%D0%BA%D0%B0%20%D0%9A%D0%B0%D0%B7%D0%B0%D1%85%D1%81%D1%82%D0%B0%D0%BD,%20100008,%20%D0%9A%D0%B0%D1%80%D0%B0%D0%B3%D0%B0%D0%BD%D0%B4%D0%B8%D0%BD%D1%81%D0%BA%D0%B0%D1%8F%20%D0%BE%D0%B1%D0%BB%D0%B0%D1%81%D1%82%D1%8C,%20%D0%B3%D0%BE%D1%80%D0%BE%D0%B4%20%D0%9A%D0%B0%D1%80%D0%B0%D0%B3%D0%B0%D0%BD%D0%B4%D0%B0,%20%D1%83%D0%BB%D0%B8%D1%86%D0%B0%20%D0%A1%D0%BA%D0%BB%D0%B0%D0%B4%D1%81%D0%BA%D0%B0%D1%8F%2010/3%20+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"
-        >
-          <a href="https://www.maps.ie/population/"
-            >Find Population on Map</a
-          ></iframe
-        >
-      </div>
-      <a href="tel:87782068880">Буров Анатолий павлович</a>
+      <dl>
+        <dt>Контактное лицо:</dt>
+        <dd>
+          <nav id="contact_face" class="contacts">
+            <nav>Буров Анатолий Павлович</nav>
+            <a href="tel:87782068880">8-(778)-206-88-80</a>
+          </nav>
+        </dd>
+        <dt>Почта:</dt>
+        <dd>
+          <nav id="contact_mail" class="contacts">
+            <a href="mailto:info@aziacb.kz">info@aziacb.kz</a>
+          </nav>
+        </dd>
+        <dt>Адрес:</dt>
+        <dd>
+          Республика Казахстан, 100008, Карагандинская область, город Караганда,
+          улица Складская 10/3
+        </dd>
+      </dl>
+      <section>
+        <div class="map">
+          <iframe
+            width="100%"
+            height="600"
+            frameborder="0"
+            scrolling="no"
+            marginheight="0"
+            marginwidth="0"
+            src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=%20%D0%A0%D0%B5%D1%81%D0%BF%D1%83%D0%B1%D0%BB%D0%B8%D0%BA%D0%B0%20%D0%9A%D0%B0%D0%B7%D0%B0%D1%85%D1%81%D1%82%D0%B0%D0%BD,%20100008,%20%D0%9A%D0%B0%D1%80%D0%B0%D0%B3%D0%B0%D0%BD%D0%B4%D0%B8%D0%BD%D1%81%D0%BA%D0%B0%D1%8F%20%D0%BE%D0%B1%D0%BB%D0%B0%D1%81%D1%82%D1%8C,%20%D0%B3%D0%BE%D1%80%D0%BE%D0%B4%20%D0%9A%D0%B0%D1%80%D0%B0%D0%B3%D0%B0%D0%BD%D0%B4%D0%B0,%20%D1%83%D0%BB%D0%B8%D1%86%D0%B0%20%D0%A1%D0%BA%D0%BB%D0%B0%D0%B4%D1%81%D0%BA%D0%B0%D1%8F%2010/3%20+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"
+          >
+            <a href="https://www.maps.ie/population/"
+              >Find Population on Map</a
+            ></iframe
+          >
+        </div>
+      </section>
     </main>
 
     <footer>
