removed unnecessary files

--- a/kontakts.html
+++ b/kontakts.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="css/style.css" rel="stylesheet" />
-    <link href="css/contacts.css" rel="stylesheet" />
   </head>
 
   <body>
@@ -38,27 +37,31 @@
       </section>
     </header>
     <main>
-      <dl>
-        <dt>Контактное лицо:</dt>
-        <dd>
-          <nav id="contact_face" class="contacts">
-            <nav>Буров Анатолий Павлович</nav>
-            <a href="tel:87782068880">8-(778)-206-88-80</a>
-          </nav>
-        </dd>
-        <dt>Почта:</dt>
-        <dd>
-          <nav id="contact_mail" class="contacts">
-            <a href="mailto:info@aziacb.kz">info@aziacb.kz</a>
-          </nav>
-        </dd>
-        <dt>Адрес:</dt>
-        <dd>
-          Республика Казахстан, 100008, Карагандинская область, город Караганда,
-          улица Складская 10/3
-        </dd>
-      </dl>
       <section>
+        <h2>Связь</h2>
+        <dl>
+          <dt>Контактное лицо:</dt>
+          <dd>
+            <nav id="contact_face" class="contacts">
+              <nav>Буров Анатолий Павлович</nav>
+              <a href="tel:87782068880">8-(778)-206-88-80</a>
+            </nav>
+          </dd>
+          <dt>Почта:</dt>
+          <dd>
+            <nav id="contact_mail" class="contacts">
+              <a href="mailto:info@aziacb.kz">info@aziacb.kz</a>
+            </nav>
+          </dd>
+          <dt>Адрес:</dt>
+          <dd>
+            Республика Казахстан, 100008, Карагандинская область, город
+            Караганда, улица Складская 10/3
+          </dd>
+        </dl>
+      </section>
+      <section>
+        <h2>Карта</h2>
         <div class="map">
           <iframe
             width="100%"
